--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,26 +1,59 @@
 {{ define "main" }}
 <!-- Main -->
 
+<section class="tiles">
+  {{ $.Scratch.Set "classCounter" 1}}
+  {{ range .Data.Pages }}
+  <article class="style{{ $.Scratch.Get "classCounter" }}">
+  <span class="image">
+      {{ if .Resources.GetMatch "intro" }}
+        {{ $preview := .Resources.GetMatch "intro" }}
+        {{ with $preview }}
+        {{ $scaled := .Fill "322x322 smart" }}
+        <img src="{{ $scaled.RelPermalink }}" alt="" />
+        {{ end }}
+      {{ end }}
+      {{ if .Resources.GetMatch "introsvg" }}
+        {{ $preview := .Resources.GetMatch "introsvg" }}
+        <img src="{{ $preview.RelPermalink }}" alt="" />
+        {{ end }}
+      </span>
+    <a href="{{ .Permalink }}">
+      <h2>{{ .Title }} </h2>
+      <div class="content">
+	<p>{{ .Description }}</p>
+      </div>
+    </a>
+  </article>
+  {{ if eq ($.Scratch.Get "classCounter") 6 }}
+  {{ $.Scratch.Set "classCounter" 1}}
+  {{ else}}
+  {{ $.Scratch.Add "classCounter" 1 }}
+  {{ end }}
+  {{ end }}
+</section>
 {{ range .Data.Pages.GroupByDate "2006" }}
-<h1>{{ .Key }}</h1>
-{{ range .Pages }}
-<hr />
-<h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
+  <h1>{{ .Key }}</h1>
+  {{ range .Pages }}
+    <hr />
+    <h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
 
-<p>
-{{ .Date.Format "Mon, Jan 2, 2006" }}
-</p>
+    <p>
+    {{ .Date.Format "Mon, Jan 2, 2006" }}
+    </p>
 
-<div>
-  {{ .Description }}
-</div>
+    <div>
+      {{ .Description }}
+    </div>
 
-<div>
-  {{ .Summary }}
+    <div>
+      {{ .Summary }}
 
-  <p class="align-right"><a href='{{ .Permalink }}'><nobr>{{ .Site.Data.i18n.morelink }} →</nobr></a></p>
+      <p class="align-right"><a href='{{ .Permalink }}'><nobr>{{ .Site.Data.i18n.morelink }} →</nobr></a></p>
 
-</div>
+    </div>
+    {{ end }}
+  {{ end }}
 {{ end }}
-{{ end }}
-{{ end }}
+
+
