--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -11,7 +11,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="referrer" content="no-referrer">
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-    <link rel="stylesheet" href="/css/main.css" />
+    {{ $sass := resources.Get "sass/main.scss" }}
+    {{ $style := $sass | resources.ToCSS }}
+    <link rel="stylesheet" href="{{ $style.Permalink }}">
     <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
     <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 
@@ -21,9 +23,9 @@
     <meta name="DC.description" content="{{ .Description }}" />
     <meta name="title" content="{{ .Title }}" />
     <meta name="description" content="{{ .Description }}" />
-    <meta name="DC.creator" content="Jan Ulrich Hasecke" />
+    <meta name="DC.creator" content="{{ .Site.Params.author }}" />
     <meta name="DC.language" content="de" />
-    <meta name="DC.publisher" content="Jan Ulrich Hasecke"/>
+    <meta name="DC.publisher" content="{{ .Site.Params.author }}"/>
     <meta name="DC.subject" content="{{ range .Params.tags }}{{ . }},{{ end }}" />
     {{ template "_internal/twitter_cards.html" . }}
     {{ template "_internal/opengraph.html" . }}
@@ -36,12 +38,11 @@
       {{ partial "logo.html" . }}
       {{ partial "navbar.html" . }}
       <div id="main">
-	<div class="inner">
-	  {{ block "main" . }}{{ end }}
-	</div>
+          <div class="inner">
+            {{ block "main" . }}{{ end }}
+          </div>
       </div>
       {{ partial "footer" . }}
-
     </div>
 
     <!-- Scripts -->
