--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -7,7 +7,7 @@
 /* Header */
 
 	#header {
-		@include padding(5em, 0, (3em, 0, -5em, 0));
+		@include padding(0em, 0, (3em, 0, -5em, 0)); // was (5em...,m space over title
 
 		.logo {
 			display: block;
