--- a/assets/sass/layout/_main.scss
+++ b/assets/sass/layout/_main.scss
@@ -7,7 +7,7 @@
 /* Main */
 
 	#main {
-		@include padding(5em, 0, (-5em, 0, 3em, 0));
+		@include padding(0em, 0, (-5em, 0, 3em, 0)); // was (5em, ...), space under main block
 
 		@include breakpoint(small) {
 			@include padding(3em, 0, (-3em, 0, 3em, 0));
