--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -9,7 +9,7 @@
 	#footer {
 		$gutter: _size(gutter);
 
-		@include padding(5em, 0, (0, 0, 3em, 0));
+		@include padding(1em, 0, (0, 0, 3em, 0)); // was 5em
 		background-color: _palette(bg-alt);
 
 		> .inner {
@@ -79,6 +79,7 @@
 
 		@include breakpoint(medium) {
 			$gutter: _size(gutter);
+			@include padding(1em, 0); // was 3em, padding around copyright
 
 			> .inner {
 				section:nth-child(1) {
@@ -94,7 +95,7 @@
 		}
 
 		@include breakpoint(small) {
-			@include padding(3em, 0);
+			@include padding(0em, 0); // was 3em, padding around copyright
 
 			> .inner {
 				@include vendor('flex-direction', 'column');
@@ -120,7 +121,7 @@
 		@include breakpoint(xsmall) {
 			> .inner {
 				.copyright {
-					margin-top: 3em;
+	 				margin-top: 0em; // was 3em
 
 					li {
 						border-left: 0;
