--- a/assets/sass/components/_tiles.scss
+++ b/assets/sass/components/_tiles.scss
@@ -51,9 +51,8 @@
 					left: 0;
 					width: 100%;
 					height: 100%;
-					opacity: 1.0;
 					z-index: 1;
-					opacity: 0.8;
+					opacity: 0.5;
 				}
 
 				&:after {
@@ -66,7 +65,7 @@
 					left: 0;
 					width: 100%;
 					height: 100%;
-					background-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" preserveAspectRatio="none"><style>line { stroke-width: 0.25px; stroke: #ffffff; }</style><line x1="0" y1="0" x2="100" y2="100" /><line x1="100" y1="0" x2="0" y2="100" /></svg>');
+//					background-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" preserveAspectRatio="none"><style>line { stroke-width: 0.25px; stroke: #ffffff; }</style><line x1="0" y1="0" x2="100" y2="100" /><line x1="100" y1="0" x2="0" y2="100" /></svg>'); // weird cross
 					background-position: center;
 					background-repeat: no-repeat;
 					background-size: 100% 100%;
@@ -128,37 +127,37 @@
 
 			&.style1 {
 				> .image:before {
-					background-color: _palette(accent1);
+					background-color: _palette(bg-light);
 				}
 			}
 
 			&.style2 {
 				> .image:before {
-					background-color: _palette(accent2);
+					background-color: _palette(bg-light);
 				}
 			}
 
 			&.style3 {
 				> .image:before {
-					background-color: _palette(accent3);
+					background-color: _palette(bg-light);
 				}
 			}
 
 			&.style4 {
 				> .image:before {
-					background-color: _palette(accent4);
+					background-color: _palette(bg-light);
 				}
 			}
 
 			&.style5 {
 				> .image:before {
-					background-color: _palette(accent5);
+					background-color: _palette(bg-light);
 				}
 			}
 
 			&.style6 {
 				> .image:before {
-					background-color: _palette(accent6);
+					background-color: _palette(bg-light);
 				}
 			}
 
