--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -34,10 +34,11 @@
 
 // Palette.
 	$palette: (
-		bg:					#ffffff,
+		bg:				#ffffff,
 		bg-accent:			#333333,
 		bg-alt:				#f6f6f6,
-		fg:					#585858,
+		bg-light:			#999,
+		fg:				#585858,
 		fg-accent:			#ffffff,
 		border:				#c9c9c9,
 		border-bg:			rgba(144,144,144,0.075),
