--- a/assets/sass/components/_image.scss
+++ b/assets/sass/components/_image.scss
@@ -50,7 +50,7 @@
 
 		&.main {
 			display: block;
-			margin: 0 0 (_size(element-margin) * 1.5) 0;
+			margin: 0 0 0 0; // third 0 was (_size(element-margin) * 1.5)
 			width: 100%;
 
 			img {
@@ -58,7 +58,7 @@
 			}
 
 			@include breakpoint(small) {
-				margin: 0 0 _size(element-margin) 0;
+				margin: 0 0 0 0;
 			}
 		}
 	}
