--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,7 +11,10 @@
   {{ range (where .Pages "Section" "project")}}
   <article class="style{{ $.Scratch.Get "classCounter" }}">
     <span class="image">
-      <img src="{{ .Params.cover }}" alt="{{ .Title }} cover" />
+      {{ with .Resources.GetMatch (.Params.cover) }}
+        {{ $scaled := ( .Fit "500x500 smart Lanzcos" ) }}
+        <img src="{{ $scaled.RelPermalink }}" alt="{{ .Title }}" />
+      {{ end }}
     </span>
     <a href="{{ .Permalink }}">
       <h2>{{ .Title }} </h2>
