--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,7 +8,7 @@
 <section class="tiles">
 {{ $.Scratch.Set "classCounter" 1}}
 {{ range .Data.Pages }}
-  {{ range (where .Pages "Section" "project")}}
+  {{ range (where .Pages "Section" "projects")}}
   <article class="style{{ $.Scratch.Get "classCounter" }}">
     <span class="image">
       {{ if .Params.cover }}
