--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,14 +1,14 @@
 {{ define "main" }}
 <!-- Main -->
-<h1>{{ .Title }}</h1>
+<!--<h1>{{ .Title }}</h1> -->
 <div class="row">
   <div class="8u">
     <p><strong>{{ .Description }}</strong></p>
   </div>
-  <div class="4u">
+<!--  <div class="4u">
     <p class="align-right">{{ .PublishDate.Format "02.01.2006" }}
     </p>
-  </div>
+  </div>-->
 </div>
 <div class="row">
   <div class="12u$">
