project list: encapsulate entries in div

--- a/layouts/projects/list.html
+++ b/layouts/projects/list.html
@@ -5,26 +5,28 @@
  <h1>{{ .Title }}</h1> 
 </header>
 now in logo line -->
-{{ range .Data.Pages }}
-<a href="{{ .Permalink }}">
-    <h2>{{ .Title }} ({{ .Date.Format "2006" }})</h2>
-  {{ if .Params.cover }}
-    {{ with .Resources.GetMatch (.Params.cover) }}
-      {{ $scaled := ( .Fit "250x250 smart Lanzcos" ) }}
+  {{ range .Data.Pages }}
+  <div class="12u$">
+    <a href="{{ .Permalink }}">
+      <h2>{{ .Title }} ({{ .Date.Format "2006" }})</h2>
+    {{ if .Params.cover }}
+      {{ with .Resources.GetMatch (.Params.cover) }}
+        {{ $scaled := ( .Fit "250x250 smart Lanzcos" ) }}
       <img class="left image" src="{{ $scaled.RelPermalink }}" alt="{{ .Title }}" />
-    {{ end }}
+      {{ end }}
   {{ end }}
   <!--    <p> {{ .Date.Format "January, 2006" }} </p> -->
-</a>
+    </a>
     <div>
       <h4>{{ .Description }}</h4>
     </div>
 
-  <div>
-    {{ .Summary }}
+    <div>
+      {{ .Summary }}
 
-    <p class="align-right"><a href='{{ .Permalink }}'><nobr>{{ .Site.Data.i18n.morelink }} →</nobr></a></p>
+      <p class="align-right"><a href='{{ .Permalink }}'><nobr>{{ .Site.Data.i18n.morelink }} →</nobr></a></p>
 
+    </div>
   </div>
   <hr />
   {{ end }}
