--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -56,7 +56,7 @@
 		font-weight: _font(weight-bold-alt);
 		line-height: 1.3;
 		margin: 0 0 (_size(element-margin) * 0.5) 0;
-		letter-spacing: _font(letter-spacing-alt);
+		//letter-spacing: _font(letter-spacing-alt);
 
 		a {
 			color: inherit;
@@ -77,7 +77,7 @@
 		font-weight: _font(weight-bold);
 		line-height: 1.5;
 		margin: 0 0 (_size(element-margin) * 0.25) 0;
-		text-transform: uppercase;
+		//text-transform: uppercase;
 		letter-spacing: _font(letter-spacing);
 
 		a {
