projects/single: intro pic styling

--- a/assets/sass/components/_image.scss
+++ b/assets/sass/components/_image.scss
@@ -17,6 +17,29 @@
 			display: block;
 		}
 
+		/* dirty addition */
+		&.lefttwenty,
+		&.righttwenty {
+			max-width: 20%;
+
+			img {
+				width: 100%;
+			}
+		}
+		&.lefttwenty {
+			float: left;
+			padding: 0 1.5em 1em 0;
+			top: 0.25em;
+		}
+
+		&.righttwenty {
+			float: right;
+			padding: 0 0 1em 1.5em;
+			top: 0.25em;
+		}
+		/* end dirty */
+
+
 		&.left,
 		&.right {
 			max-width: 40%;
