projects: more compact headers

--- a/layouts/projects/list.html
+++ b/layouts/projects/list.html
@@ -8,7 +8,7 @@ now in logo line -->
   {{ range .Data.Pages }}
   <div class="12u$">
     <a href="{{ .Permalink }}">
-      <h2>{{ .Title }} ({{ .Date.Format "2006" }})</h2>
+      <h3>{{ .Title }}: {{ .Description }} ({{ .Date.Format "2006" }})</h2>
     {{ if .Params.cover }}
       {{ with .Resources.GetMatch (.Params.cover) }}
         {{ $scaled := ( .Fit "250x250 smart Lanzcos" ) }}
@@ -17,10 +17,6 @@ now in logo line -->
   {{ end }}
   <!--    <p> {{ .Date.Format "January, 2006" }} </p> -->
     </a>
-    <div>
-      <h4>{{ .Description }}</h4>
-    </div>
-
     <div>
       {{ .Summary }}
 
