--- a/layouts/projects/single.html
+++ b/layouts/projects/single.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 <!-- Todo: Masthead caption style not there yet --> 
 <!-- Main -->
-<h1>{{ .Description }} ({{ .PublishDate.Format "2006" }})</h1>
+<h1>{{ .Title }}: {{ .Description }} ({{ .PublishDate.Format "2006" }})</h1>
 
 <div class="row">
   <div class="4u">
@@ -27,6 +27,7 @@
   {{ end }}
   </div>
   <div class="8u$">
+    <h3>Skills:</h3>
     <ul>
     {{ range $.Param "resources.skills" }}
       <li>{{ . }}</li>
